--- a/values.yaml
+++ b/values.yaml
@@ -33,16 +33,16 @@ service:
 ingress:
   enabled: true
   annotations:
-    kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: 2000m
   path: /
   hosts:
     - teamcity.local
-  tls: 
-    - secretName: teamcity.local
-      hosts:
-        - teamcity.local
+  # tls: 
+  #   - secretName: teamcity.local
+  #     hosts:
+  #       - teamcity.local
 
 resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
